fixed, and remove scrollbar

--- a/en/style.css
+++ b/en/style.css
@@ -19,47 +19,11 @@
   color: #ccd7e1;
 }
 
-
-html::-webkit-scrollbar{
-  width: 3.5px;
-  z-index: 1;
-}
-
-html::-moz-scrollbar{
-  width: 3.5px;
-  z-index: 1;
-}
-
-
-
-html::-webkit-scrollbar-thumb:hover {
-  width: 6px;
-}
- 
-html::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-}
- 
-html::-webkit-scrollbar-thumb {
-  /*background-color: #1c3a4b;*/
-  background: rgb(2,0,36);
-  background: -moz-linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(0,35,112,1) 38%, rgba(0,110,255,1) 100%);
-  background: -webkit-linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(0,35,112,1) 38%, rgba(0,110,255,1) 100%);
-  background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(0,35,112,1) 38%, rgba(0,110,255,1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#006eff",GradientType=1);
-  outline: 1px solid #1f004a;
-  border-radius: 10px;
-
-}
-
-
-
 html
 {
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
-  scrollbar-color: rebeccapurple green;
 }
 *
 {
@@ -1179,9 +1143,16 @@ body{
   {
     padding: 1% 1.2%;
   }
+  .reseachHighLightsContentMain
+  {
+    height: auto;
+    padding: ;
+  }
 
-
-
+  .reseachHighLightsPrev
+  {
+    
+  }
 
 
 
